# moshpit

./: .gitignore  README.md  justfile  pyproject.toml
recipes/: README.md  bloom-trails.yaml  chaos-jitter.yaml  classic-mosh.yaml  dreamy-melt.yaml  wave-distort.yaml
src/moshpit/: __init__.py  cli.py
src/moshpit/config/: __init__.py  loader.py  schema.py
src/moshpit/core/: __init__.py  avi.py  iframe.py  pframe.py  transfer.py  vectors.py
src/moshpit/io/: __init__.py  formats.py  video.py
src/moshpit/pipeline/: __init__.py  chain.py  parser.py  sweep.py
src/moshpit/transforms/: __init__.py  builtin.py  expressions.py  registry.py
tests/: __init__.py  test_parser.py  test_sweep.py  test_transforms.py
